@@ -1,5 +1,5 @@
-org.freedesktop.dbus.MessageReader = ERR
-org.freedesktop.dbus.MessageWriter = ERR
+org.freedesktop.dbus.MessageReader = INFO
+org.freedesktop.dbus.MessageWriter = INFO
 org.freedesktop.dbus.Message = ERR
 org.freedesktop.dbus.MethodCall = ERR
 org.freedesktop.dbus.MethodTuple = ERR
@@ -14,7 +14,7 @@ org.freedesktop.dbus.EfficientQueue = ERR
 org.freedesktop.dbus.Transport = ERR
 org.freedesktop.dbus.Transport$SASL = ERR
 org.freedesktop.dbus.Transport$SASL$Command = ERR
-org.freedesktop.dbus.Marshalling = VERBOSE
+org.freedesktop.dbus.Marshalling = ERR
 org.freedesktop.dbus.BusAddress = ERR
 org.freedesktop.dbus.RemoteInvocationHandler = ERR
 org.freedesktop.dbus.test.cross_test_client = ERR
